Tue May  9 15:52:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* heuristic.c (get_best_princ_for_target): Missing context cuased
		coredump. 
		(get_best_princ_for_target): Missing contexts in call to
		 		find_either_ticket. 
		(find_either_ticket): Missing context in call of find_ticket
		(get_best_princ_for_target): Add missing context

Thu Mar 16 20:50:32 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Replace CHECK_STDARG with AC_CHECK_HEADERS.
	* main.c (print_status):  Use HAVE_STDARG_H to control whether to
	declare with ", ..."; not STDARG_PROTOTYPES.
	* ksu.h:  Don't include <stdarg.h> or <varargs.h>, since they
	are already included by "com_err.h".

Thu Mar  2 12:32:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:28:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:11:21 1995  John Gilmore  (gnu at toad.com)

	* ksu.h:  Avoid <krb5/...> and <com_err.h> includes.

Fri Feb 17 18:10:04 1995 Chris Provenzano  (proven@mit.edu)

	* krb_auth_su.c krb5_auth_check()) Call krb5_get_cred_from_kdc()
		with new calling convention.

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * krb_auth_su.c Removed krb5_keytype, changed krb5_enctype to
                krb5_enctype *, changed krb5_preauthtype to krb5_preauthtype *
                for krb5_get_in_tkt_with_password() rotuine.

Sat Jan 28 14:45:55 1995  Chris Provenzano (proven@mit.edu)

        * krb_auth_su.c (krb5_verify_tkt_def()) use new API for 
		krb5_kt_get_entry.

Wed Jan 18 12:21:30 1995    <tytso@rsx-11.mit.edu>

	* main.c (main): If gethostbyname returns an error, exit after
		printing an error message.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:15:28 1994  Theodore Y. Ts'o  (tytso@dcl)
